--- a/package.json
+++ b/package.json
@@ -10,14 +10,22 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.14.3",
+    "@radix-ui/react-avatar": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.0",
+    "@stream-io/node-sdk": "^0.4.22",
+    "@stream-io/video-react-sdk": "^1.14.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.23.0",
+    "framer-motion": "^12.6.5",
     "lucide-react": "^0.487.0",
     "next": "14.2.23",
+    "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-feather": "^2.0.10",
+    "svix": "^1.64.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
