--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@clerk/nextjs": "^6.14.3",
     "@radix-ui/react-avatar": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-dropdown-menu": "^2.1.7",
+    "@radix-ui/react-scroll-area": "^1.2.4",
+    "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.0",
     "@stream-io/node-sdk": "^0.4.22",
     "@stream-io/video-react-sdk": "^1.14.2",
@@ -20,11 +23,14 @@
     "convex": "^1.23.0",
     "framer-motion": "^12.6.5",
     "lucide-react": "^0.487.0",
+    "monaco-editor": "^0.52.2",
     "next": "14.2.23",
     "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
     "react-feather": "^2.0.10",
+    "react-hot-toast": "^2.5.2",
+    "react-resizable-panels": "^2.1.7",
     "svix": "^1.64.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7"
