--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.23.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.6.5",
     "lucide-react": "^0.487.0",
     "next": "14.2.23",
     "next-themes": "^0.4.6",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-feather": "^2.0.10",
     "react-hot-toast": "^2.5.2",
