--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.14.3",
+    "@google/generative-ai": "^0.21.0",
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-avatar": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.7",
@@ -21,6 +22,7 @@
     "@radix-ui/react-switch": "^1.1.4",
     "@stream-io/node-sdk": "^0.4.22",
     "@stream-io/video-react-sdk": "^1.14.2",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.23.0",
