--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "convex": "^1.23.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.6.5",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.9.3",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.487.0",
     "next": "14.2.23",
     "next-themes": "^0.4.6",
