--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.14.3",
+    "react-email": "^3.0.7",
+    "react-hook-form": "^7.54.2",
+    "resend": "^4.1.2",
+    "@react-email/components": "0.0.12",
     "@google/generative-ai": "^0.21.0",
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-avatar": "^1.1.4",
