--- a/package.json
+++ b/package.json
@@ -10,10 +10,6 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.14.3",
-    "react-email": "^3.0.7",
-    "react-hook-form": "^7.54.2",
-    "resend": "^4.1.2",
-    "@react-email/components": "0.0.12",
     "@google/generative-ai": "^0.21.0",
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-avatar": "^1.1.4",
@@ -24,6 +20,7 @@
     "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.1.4",
+    "@react-email/components": "0.0.12",
     "@stream-io/node-sdk": "^0.4.22",
     "@stream-io/video-react-sdk": "^1.14.2",
     "axios": "^1.8.4",
@@ -41,9 +38,13 @@
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
+    "react-email": "^3.0.7",
     "react-feather": "^2.0.10",
+    "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
+    "resend": "^4.1.2",
     "svix": "^1.64.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7"
