--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
+    "recharts": "^2.15.2",
     "resend": "^4.1.2",
     "svix": "^1.64.0",
     "tailwind-merge": "^3.2.0",
