--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.1.4",
     "@react-email/components": "0.0.12",
+    "@react-three/drei": "^10.4.2",
+    "@react-three/fiber": "^9.1.4",
     "@stream-io/node-sdk": "^0.4.22",
     "@stream-io/video-react-sdk": "^1.14.2",
     "axios": "^1.8.4",
@@ -28,7 +30,7 @@
     "clsx": "^2.1.1",
     "convex": "^1.23.0",
     "date-fns": "^4.1.0",
-    "framer-motion": "^12.6.5",
+    "framer-motion": "^12.23.0",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.9.3",
     "jspdf": "^3.0.1",
@@ -48,7 +50,8 @@
     "resend": "^4.1.2",
     "svix": "^1.64.0",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.178.0"
   },
   "devDependencies": {
     "@types/node": "^20",
